fixed some spacing issues'

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -794,6 +794,7 @@ footer {
   #rest_logo {
     width: 80px;
     height: 80px;
+    margin-bottom: 20px;
   }
 
 
@@ -806,7 +807,7 @@ footer {
   }
 
   .div-table {
-    margin-top: 70px;
+    margin-top: 30px;
   }
 
   .account-form {
